--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CollaborativeRading</title>
-</head>
-<body>
+  <h1 style="color:red;">CollaborativeReading App - UX/UI Design Study</h1>
+  <style>
+    h1{
+      font-size:50px;
+    }
+  </style>
+  <h2>A Class project part of UCI Course of 263P</h2>
+  <h3>Team members names</h3>
+  <img src="/Users/priyanka/desktop/spring2021/263P_UserExperienceInteraction/UX_DesignPage/images/title.jpeg" alt="“Books are the most loyal and trusted friends you can ever have”." width="600" height="450" />
 
-<h1>class project</h1>
-<p>263P</p>
-
+  <p>Today people are
+  reading lesser books than before, reading a book to the end requires commitment of
+  time and attention which is difficult to give when social life is disconnected from a digital
+  book reading experience. This leads to many unfinished books and less enthusiasm in
+  the habit of reading. Therefore, people might not be fully engaged in reading their
+  books.<br>We want to design a system which could help with this problem. The users might
+  need an environment where they can share their thoughts on different book topics and
+  have conversations with other book readers. Such an environment could help people
+  stay more focused on the book they are reading by making them more enthusiastic
+  about the reading activity.
+</p>
+<body style="background-color:rgb(245, 247, 241);">
 </body>
+<h2>Initial Idea</h2>
+<p>we designed a system that helps people stay engaged in reading
+  for a longer time by allowing them to see and comment on the progress of other users.
+  In addition, this system would allow the readers to share their thoughts on a book topic
+  with other users to keep them engaged in reading and in conversation about books. We
+  want to provide a social environment for book readers so that they feel enthusiastic to
+  keep reading more with friends and are also able to see the insights from other readers
+  on unread chapters of a book which keeps up their interest in finishing a book.<br>
+  <h2><b>Steps envolved in design process</b></h2>
+</p>
+
+  <h2>Competitor Analysis</h2>
+  <p>Google Play Books<br>Kindle<br>Goodreads</p>
+
 </html>
+
+
