--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <h1 style="color:red;">CollaborativeReading App - UX/UI Design Study</h1>
+  <h1 style="color:rgb(119, 16, 16);">UX/UI Design - CollaborativeReading App</h1>
   <style>
     h1{
       font-size:50px;
     }
   </style>
   <h2>A Class project part of UCI Course of 263P</h2>
-  <h3>Team members names</h3>
+  <h3 style="color:rgb(53, 50, 50);">Team members names</h3>
   <img src="/Users/priyanka/desktop/spring2021/263P_UserExperienceInteraction/UX_DesignPage/images/title.jpeg" alt="“Books are the most loyal and trusted friends you can ever have”." width="600" height="450" />
 
-  <p>Today people are
+  <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Today people are
   reading lesser books than before, reading a book to the end requires commitment of
   time and attention which is difficult to give when social life is disconnected from a digital
   book reading experience. This leads to many unfinished books and less enthusiasm in
@@ -20,11 +20,17 @@
   have conversations with other book readers. Such an environment could help people
   stay more focused on the book they are reading by making them more enthusiastic
   about the reading activity.
+  <style>
+    p::first-letter{font-size: 200%;}
+    p1{
+    font-size:50px;}
+  </style> 
+
 </p>
 <body style="background-color:rgb(245, 247, 241);">
 </body>
 <h2>Initial Idea</h2>
-<p>we designed a system that helps people stay engaged in reading
+<p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">we designed a system that helps people stay engaged in reading
   for a longer time by allowing them to see and comment on the progress of other users.
   In addition, this system would allow the readers to share their thoughts on a book topic
   with other users to keep them engaged in reading and in conversation about books. We
@@ -35,7 +41,7 @@
 </p>
 
   <h2>Competitor Analysis</h2>
-  <p>Google Play Books<br>Kindle<br>Goodreads</p>
+  <h3>Google Play Books<br>Kindle<br>Goodreads</h3>
 
 </html>
 
