updated index page

--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <h1 style="color:rgb(119, 16, 16);">UX/UI Design - CollaborativeReading App</h1>
+  <h1 style="color:rgb(119, 16, 16);text-align: center;">UX/UI Design - CollaborativeReading App</h1>
   <style>
     h1{
       font-size:50px;
     }
   </style>
-  <h2>A Class project part of UCI Course of 263P</h2>
-  <h3 style="color:rgb(53, 50, 50);">Team members names</h3>
-  <img src="/Users/priyanka/desktop/spring2021/263P_UserExperienceInteraction/UX_DesignPage/images/title.jpeg" alt="“Books are the most loyal and trusted friends you can ever have”." width="600" height="450" />
+  <h2 style="text-align: center; color: rgb(70, 138, 194);"><i>"Books are the most loyal and trusted friends you can ever have!"</i></h2>
+  <!--<h3 style="color:rgb(53, 50, 50); font-size: 15px;" >This project has been designed as a part of 263P course</h3>-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+  <img src="/Users/priyanka/desktop/spring2021/263P_UserExperienceInteraction/UX_DesignPage/images/title.jpeg" class="center" alt="“Books are the most loyal and trusted friends you can ever have”." width="600" height="450"/>
 
-  <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Today people are
+ <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-decoration:double;text-align: center;">Today people are
   reading lesser books than before, reading a book to the end requires commitment of
   time and attention which is difficult to give when social life is disconnected from a digital
   book reading experience. This leads to many unfinished books and less enthusiasm in
   the habit of reading. Therefore, people might not be fully engaged in reading their
-  books.<br>We want to design a system which could help with this problem. The users might
-  need an environment where they can share their thoughts on different book topics and
+  books.<br></br>A system which could help users to provide an environment where they can share their thoughts on different book topics and
   have conversations with other book readers. Such an environment could help people
   stay more focused on the book they are reading by making them more enthusiastic
   about the reading activity.
@@ -24,25 +31,31 @@
     p::first-letter{font-size: 200%;}
     p1{
     font-size:50px;}
+    p{
+      font-size:20px;
+    }
   </style> 
 
 </p>
 <body style="background-color:rgb(245, 247, 241);">
 </body>
-<h2>Initial Idea</h2>
-<p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">we designed a system that helps people stay engaged in reading
+<h2 style="font-size: 30px; text-decoration-color: cadetblue">Initial Idea</h2>
+<p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: rgb(53, 47, 47);">we designed a platform that helps people stay engaged in reading
   for a longer time by allowing them to see and comment on the progress of other users.
   In addition, this system would allow the readers to share their thoughts on a book topic
   with other users to keep them engaged in reading and in conversation about books. We
   want to provide a social environment for book readers so that they feel enthusiastic to
   keep reading more with friends and are also able to see the insights from other readers
   on unread chapters of a book which keeps up their interest in finishing a book.<br>
-  <h2><b>Steps envolved in design process</b></h2>
+  <h2 style="font-size: 25px;"><b>Steps envolved in design process</b></h2>
 </p>
 
-  <h2>Competitor Analysis</h2>
+  <h2 style="font-family: Georgia, 'Times New Roman', Times, serif;">Competitor Analysis</h2>
   <h3>Google Play Books<br>Kindle<br>Goodreads</h3>
-
+  <h2 style="font-family: Georgia, 'Times New Roman', Times, serif;">User Personas</h2>
+  <h2 style="font-family: Georgia, 'Times New Roman', Times, serif;">Initial Prototypes</h2>
+  <h2 style="font-family: Georgia, 'Times New Roman', Times, serif;">Evaluations</h2>
+  <h2 style="font-family: Georgia, 'Times New Roman', Times, serif;">Final Prototypes</h2>
 </html>
 
 
