--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
       <meta charset="UTF-8" />
       <title>Nooshin's Website</title>
       <link rel="stylesheet" href="style/collabBookStyle.css">
+      <!-- CSS only -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
 
   <body>
+    <nav id="navigation" class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">SWE 263 project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#About">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#CompetitorAnalysis">Competitors</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Personas">User Personas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Evaluations">Evaluations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Prototypes">Prototypes</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <div class="wrapper">
       <header>
         <h1 >UX/UI Design - CollaborativeReading App</h1>
@@ -14,22 +43,23 @@
         <!--<h3 style="color:rgb(53, 50, 50); font-size: 15px;" >This project has been designed as a part of 263P course</h3>-->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       </header>
-
-      <section class="section1">
-        <div id="firstSection">
-          <img src="images/title.jpg" alt="“Books are the most loyal and trusted friends you can ever have”."/>
-          <p>  Today people are
-                reading lesser books than before, reading a book to the end requires commitment of
-                time and attention which is difficult to give when social life is disconnected from a digital
-                book reading experience. This leads to many unfinished books and less enthusiasm in
-                the habit of reading. Therefore, people might not be fully engaged in reading their
-                books.<br></br>A system which could help users to provide an environment where they can share their thoughts on different book topics and
-                have conversations with other book readers. Such an environment could help people
-                stay more focused on the book they are reading by making them more enthusiastic
-                about the reading activity.
-          </p>
-        </div>
-      </section>
+      <div id= "About">
+        <section class="section1">
+          <div id="firstSection">
+            <img src="images/title.jpg" alt="“Books are the most loyal and trusted friends you can ever have”."/>
+            <p>  Today people are
+                  reading lesser books than before, reading a book to the end requires commitment of
+                  time and attention which is difficult to give when social life is disconnected from a digital
+                  book reading experience. This leads to many unfinished books and less enthusiasm in
+                  the habit of reading. Therefore, people might not be fully engaged in reading their
+                  books.<br></br>A system which could help users to provide an environment where they can share their thoughts on different book topics and
+                  have conversations with other book readers. Such an environment could help people
+                  stay more focused on the book they are reading by making them more enthusiastic
+                  about the reading activity.
+            </p>
+          </div>
+        </section>
+      </div>
 
       <section class="section2">
         <div id="initIdea">
@@ -48,28 +78,29 @@
           <h2 ><b>Steps envolved in design process</b></h2>
         </div>
 
-        <div>
+        <div id = "CompetitorAnalysis">
           <h2>Competitor Analysis</h2>
           <h3>Google Play Books<br>Kindle<br>Goodreads</h3>
         </div>
 
-        <div>
+        <div id = "Personas">
           <h2>User Personas</h2>
         </div>
 
-        <div>
-          <h2>Initial Prototypes</h2>
-        </div>
-
-        <div>
+        <div id = "Evaluations">
           <h2>Evaluations</h2>
         </div>
 
-        <div>
+        <div id = "Prototypes">
+          <h2>Initial Prototypes</h2>
           <h2>Final Prototypes</h2>
         </div>
       </section>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+    
   </body>
 </html>
 
