updated index page

--- a/index.html
+++ b/index.html
@@ -74,13 +74,26 @@
           </p>
         </div>
 
-        <div id="steps">
-          <h2 ><b>Steps envolved in design process</b></h2>
-        </div>
+        <!--<div id="steps">
+          <h2 >Our steps to design the app</h2>
+          <h3></h3>
+        </div>-->
 
         <div id = "CompetitorAnalysis">
           <h2>Competitor Analysis</h2>
-          <h3>Google Play Books<br>Kindle<br>Goodreads</h3>
+          <p>We did three competitive analysis during the early stage of designing</p>
+          <h3>Google Play Books</h3>
+          <p>Google Play Books provides readers a user-friendly reading experience. Readers can add bookmarks, change the display layout, add personal notes, search texts, and change chapters easily while they are reading.The system has functions that allow readers to make notes, obtain translations, change themes, go to different chapters, change textviews, etc.. This platform is designed to be broadly available.
+
+            After researching this platform, we found some good points that we could apply to our system. Google Play Book has a user-friendly UX design. Take the website homepage[9]  as an example. We can evaluate this page with Norman’s principles of design. Users can easily find where and how to implement certain functionalities, which represents the discoverability of this system. When users move the mouse to some parts of the page, the shape and color of some components may change, and this will provide users feedback. Besides, when the mouse is on a book, a cross and exclamation marks will appear, which will give users some conceptual models and help them use the platform. These marks, along with other icons on the page, serve as signifiers to tell users the corresponding operations. The book components in the page can be the mapping to different books.the reading functions not only have great UX designs, but also have some user-friendly and powerful tools that improve the reading experiences. For example, Readers can go to each chapter easily. They can adjust the font and background of the pages. Moreover, they can translate and search the text, add bookmarks to the book. We decided to incarporate these two features of bookmarks and change the backgroud of reading page in our project.
+            
+          </p>
+          <h3>Kindle</h3>
+          <p>Kindle is a small, lightweight and portable device, a huge number of books can be stored on it. Most of the users purchase and download e-books or PDFsReaders can go through and read different books on this small device or on the Kindle app from their phone and can annotate or bookmark  the contents whenever something catches their attention. They can stop reading a book and come back to it whenever they want to start reading from where they have left before. Readers can go through and read different books on this small device or on the Kindle app from their phone and can annotate or bookmark  the contents whenever something catches their attention. They can stop reading a book and come back to it whenever they want to start reading from where they have left before. In our system We want book readers to be able to search for and find their favorite books, and Kindle enables the users to do so. However, Kindle doesn’t let different users collaborate on one book, and it doesn’t provide a social environment for its users. Therefore, our system atempt to fix that by providing a platform where readers can collaborate and share their thoughts.
+          </p>
+          <h3>Goodreads</h3>
+          <p>Goodreads library has a huge variety of users ranging from 13 years old to older individuals. It provides the flexibility to its users to review their favorite books stored in their shelves online anywhere and anytime. Its user base has grown to 20 millions users up to now. 
+            It gives a platform for readers to share their book review and for other users to read these reviews and make the decision on the next book to read, it provides the sense of community by running reading challenges, compiling best books lists under different categories. Since Goodreads users feel a sense of positivity after reading the friends comments on their reads, we atempt to come up with such a feature to help our users to get this positive feeling by sharing the unread part from their reads and motivating their friends to read</p>
         </div>
 
         <div id = "Personas">
