--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
         </div>
 
         <div id = "Personas">
-          <h2>User Personas</h2>
+          <h2>Understand Users and Personas</h2>
         </div>
 
         <div id = "Evaluations">
-          <h2>Evaluations</h2>
+          <h2>Initial Sketches</h2>
         </div>
 
         <div id = "Prototypes">
-          <h2>Initial Prototypes</h2>
           <h2>Final Prototypes</h2>
+          <h2>Reflections</h2>
         </div>
       </section>
     </div>
