added users picture

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 
         <div id = "Personas">
           <h2>Understand Users and Personas</h2>
+          <div class="PictureDiv row">
+            <div class="pics_init col-xl-6 col-lg-12">
+              <figure class="users-pics">
+                  <img src="images/users.png" alt="" />
+                  <figcaption></figcaption>
+              </figure>
+            </div>
+            <p>Many readers prefer reading in a group for different reasons<br>Students like to read together and share the insights among them<br>People find their next book to read through online book recommendations<br>Some people prefer hard copies because they find online reading interfaces complex 
+            </p>
         </div>
 
         <div id = "Evaluations">
