updated index page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
-      <title>Nooshin's Website</title>
+      <title>263P Collaborative Reading Website</title>
       <link rel="stylesheet" href="style/collabBookStyle.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- CSS only -->
@@ -97,6 +97,45 @@
 
         <div id = "Personas">
           <h2>Understand Users and Personas</h2>
+          <p>To identify the user’s needs of our study, we have conducted user research which
+            includes interviews with 9 users ranging from active readers to infrequent readers. The
+            aim of these interviews was to find out their reading habits, motivation around
+            choosing a book, tracking what they have read and want to share with their friends
+            and family and what challenges they faced during reading.</p>
+          <div class="PictureDiv row">
+            <div class="personas col-lg-6 col-md-12">
+              <figure id="persona1">
+                  <img src="images/Persona1png.png" 
+                      alt="first persona"/>
+              </figure>
+            </div>
+            
+            <div class="personas">
+              <figure id="persona2 col-lg-6 col-md-12">
+                  <img src="images/Personas2.png" 
+                      alt="second persona" />
+                  <figcaption></figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div class="PictureDiv row">
+            <div class="personas col-lg-6 col-md-12">
+              <figure id="persona3">
+                  <img src="images/Personas3.png" 
+                      alt="third persona" />
+                  <figcaption></figcaption>
+              </figure>
+          </div>
+
+          <div class="personas col-lg-6 col-md-12">
+              <figure id="persona4">
+                  <img src="images/Personas4.png" 
+                      alt="fourth persona" />
+                  <figcaption></figcaption>
+              </figure>
+          </div>
+          </div>
           <div class="PictureDiv row">
             <div class="pics_init col-xl-6 col-lg-12">
               <figure class="users-pics">
@@ -104,12 +143,40 @@
                   <figcaption></figcaption>
               </figure>
             </div>
-            <p>Many readers prefer reading in a group for different reasons<br>Students like to read together and share the insights among them<br>People find their next book to read through online book recommendations<br>Some people prefer hard copies because they find online reading interfaces complex 
-            </p>
         </div>
+        <h2>Learnings from user study</h2>
+        <ul>
+          <li> 
+            Many readers prefer reading in a group for different reasons
+          </li>
+          <li>
+            Students like to read together and share the insights among them
+          </li>
+          <li>
+            People find their next book to read through online book recommendations
+          </li>
+          <li>
+            Some people prefer hard copies because they find online reading interfaces complex
+          </li>
+        </ul>
 
         <div id = "Evaluations">
           <h2>Initial Sketches</h2>
+          <div class="PictureDiv row">
+          <div class="pics_init col-lg-6 col-md-12">
+            <figure class="sketches-pics">
+                <img src="images/sketch3.jpg" alt="" />
+                <figcaption>Sketches for wireframe</figcaption>
+            </figure>
+          </div>
+          </div>
+
+          <h2>User Evaluations</h2>
+          <p>After completing all the interviews, we conducted qualitative data analysis using <a href="https://www.nngroup.com/articles/thematic-analysis/"> Thematic analysis</a>.
+          We used the <a href="Thematic analysis">affinity diagram technique</a> to synthesize the findings and uncover insights from the data that
+          helped us to identify user needs. From each interview, we created notes and thoughts using sticky notes on <a href="https://miro.com/app/dashboard/">Miro
+          </a> and grouped each of them into four user types. 
+          This grouping helped us to identify the behavioral patterns of user needs.</p>
           <div class="PictureDiv row">
             <div class="pics_init col-xl-6 col-lg-12">
               <figure class="sketches-pics">
@@ -125,12 +192,7 @@
               </figure>
             </div>
 
-            <div class="pics_init col-lg-6 col-md-12">
-                <figure class="sketches-pics">
-                    <img src="images/sketch3.jpg" alt="" />
-                    <figcaption>Sketches for wireframe</figcaption>
-                </figure>
-            </div>
+           
         </div>
 
         <div id = "Prototypes">
