--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div id="iterationPic">
               <figure>
                   <img src="images/iterations.jpg" alt="example of evaluation process" />
-                  <figcaption>Iteration During evalution</figcaption>
+                  <figcaption class="center">Iteration During evalution</figcaption>
               </figure>
           </div>
 
