--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
             <p>To look at the prototype of our final design interactively, you can click on the link: 
               <a href="https://www.figma.com/proto/innmEVcxPyrC9LQ6DgX4yM/User-Stories?page-id=626%3A68&node-id=626%3A376&viewport=352%2C220%2C0.12533512711524963&scaling=scale-down" target="_blank">Final Desing Prototype on Figma</a>  
             </p>
-        </div>
-
-        <div id="reflections">
-          <h2>Reflections</h2>
-          <ul>
+          </div>
+          
+          <div id="reflections">
+            <h2>Reflections</h2>
+            <ul>
               <li> 
                   User research provided us what the users really want in our system and how they think about collaborative reading.
               </li>
@@ -299,10 +299,10 @@
                 Targeting potentional user for our system in the intial state was challenging for us.
               </li>
               <li>
-                Some people find it cumbersome to read on mobile devices due to its small size and prefer hard-copies. 
+                Some people still find it cumbersome to read on mobile devices due to their small sizes and prefer hard-copies.
               </li>
             </ul>
-        </div>
+          </div>
       </section>
     </div>
 
@@ -331,7 +331,7 @@
           </div>
         </div>
           
-        <h6>&copy;2021 , UCI SWE263</h6>
+        &copy; 2021 , UCI SWE263
     </footer> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
